# llm-rogue

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  biome.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml
crates/chunk-server/: Cargo.toml
crates/chunk-server/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: camera.rs  chunk_manager.rs  chunk_payload.rs  collision.rs  error.rs  lib.rs  map_features.rs  particle_system.rs  render.rs  terrain_grid.rs  voxel.rs
crates/engine/src/render/: billboard_pass.rs  blit_pass.rs  chunk_atlas.rs  compute_pass.rs  gpu.rs  light_buffer.rs  mod.rs  particle_pass.rs  pipeline_helpers.rs  raymarch_pass.rs  sprite_pass.rs
crates/engine/tests/: particle_visual.rs  render_regression.rs  sprite_regression.rs
docs/plans/: 2026-02-07-phase1-scaffold.md  2026-02-07-voxel-engine-design.md  2026-02-15-app-error-screen-tests.md  2026-02-15-glam-migration-impl.md  2026-02-15-phase4a-multi-chunk-rendering-design.md  2026-02-15-phase4a-multi-chunk-rendering-impl.md  2026-02-17-camera-intent-plan.md  2026-02-19-phase5-lighting-design.md  2026-02-19-phase5-lighting-plan.md  2026-02-23-phase4b-collision-design.md  2026-02-23-phase4b-collision-plan.md  2026-02-24-debounced-resize-design.md  2026-02-24-legacy-cleanup-is-solid-design.md  2026-02-24-phase4b-streaming-polish-design.md  2026-02-24-visual-diagnostics-plan.md  2026-02-27-game-logic-loop-design.md  2026-02-27-game-logic-loop-impl.md  2026-03-02-dynamic-local-lighting-design.md  2026-03-02-dynamic-local-lighting-impl.md  2026-03-03-ortho-projection-design.md  2026-03-03-ortho-projection-impl.md  2026-03-07-phase8b-hud-combat-log-design.md  2026-03-07-phase8b-hud-combat-log-impl.md  2026-03-08-particle-visual-tests-design.md  2026-03-08-particle-visual-tests-impl.md  2026-03-13-render-scale-spec.md  2026-03-13-renderer-optimization.md  2026-03-17-phase8-death-game-over-design.md  2026-03-17-phase8-death-game-over-impl.md  2026-03-24-phase9-tier1-chunk-server-design.md  2026-03-29-dedup-impl.md  SUMMARY.md
shaders/: blit.wgsl  gradient.wgsl  particle.wgsl  raymarch.wgsl  sprite.wgsl
src/: engine-api.ts  input.ts  main.ts  main.tsx  messages.ts  stats-layout.ts  stats.test.ts  stats.ts  vec.ts
src/game/: combat-log.ts  combat-particles.ts  combat.ts  entity-hit-test.ts  entity.ts  equipment.ts  follow-camera.ts  fov.ts  health-tier.ts  inventory.ts  light-manager.ts  particle-effects.ts  run-stats.ts  screen-projection.ts  terrain.ts  turn-loop.ts  world.ts
src/ui/: App.test.tsx  App.tsx  CombatLog.tsx  DiagnosticsOverlay.test.tsx  DiagnosticsOverlay.tsx  EntityTooltip.tsx  GameOverScreen.tsx  InventoryPanel.tsx  PlayerHUD.tsx  SpriteEditorPanel.tsx  ToolPalette.tsx  app-mode.ts  app-setup.ts  editor-mode.ts  glyph-rasterizer.ts  (+5 more)
(+63 files in other folders)
