[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = "28"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
log = "0.4"
noise = "0.9"
bytemuck = { version = "1", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = ["OffscreenCanvas", "console"]
